--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
   <title>Weather App</title>
 </head>
 
+<!-- <body class="light"> -->
+
 <body class="light">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
