--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     rel="stylesheet" type="text/css" />
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
+  <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
   <title>Weather App</title>
 </head>
 
