--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,12 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link href="//db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg"
-    rel="stylesheet" />
+  <!-- <link href="//db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg"
+    rel="stylesheet" /> -->
   <link rel="stylesheet"
     href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
   <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet">
+  <link rel="stylesheet" href="../src/index.scss" />
   <title>Weather App</title>
 </head>
 
