--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" href="/images/logo/logo-weather.png" />
   <!-- <link href="//db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg"
     rel="stylesheet" /> -->
   <link rel="stylesheet"
